@@ -2,11 +2,7 @@
 // See the file COPYING for more information
 
 #include <scaler.h>
-
-// for _exit
-#ifdef HAVE_UNISTD_H
-	#include <unistd.h>
-#endif
+#include <rudiments/process.h>
 
 scaler	*s;
 
@@ -16,7 +12,7 @@ void cleanUp() {
 
 RETSIGTYPE shutDown(int signum) {
 	cleanUp();
-	_exit(0);
+	process::exit(0);
 }
 
 int main(int argc, const char **argv) {
@@ -32,5 +28,5 @@ int main(int argc, const char **argv) {
 
 	// unsuccessful completion
 	cleanUp();
-	exit(1);
+	process::exit(1);
 }
