@@ -1,6 +1,7 @@
 0.43 - updated ruby code build to take sitearch into account during includes
 	updated ruby code to map STR2CSTR to StringValuePtr for ruby 1.9
 	updated to use rudiments' updated signalclasses
+	replaced calls to fork() and exit() with process class calls
 
 0.42 - fixed a bug causing cursor id's not to get set for some db's
 	updated configure script to look for client64 in addition to client
